updated one page website

--- a/Basic_HTML_and_CSS/One Page Website/CSS/one_page_website.css
+++ b/Basic_HTML_and_CSS/One Page Website/CSS/one_page_website.css
@@ -16,7 +16,7 @@
 
 .topnav a {
     float: left;
-    color: black;
+    color: #666;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -24,7 +24,7 @@
  }
 
  .topnav a:hover {
-    background-color: white;
+    background-color: #4e4e4eac;
     color: black;
  }
 
@@ -64,7 +64,7 @@ h1{
     height: 35vh;
     margin: 10px;
     border-radius: 50px;
-    background: url(iphone5.png);
+    background: url(../Images/iphone5.png);
     background-size: cover;
     position: relative;
     transition: width 0.5s;
@@ -72,13 +72,13 @@ h1{
 }
 
 .img-box:nth-child(2){
-    background: url(macbook5.png);
+    background: url(../Images/macbook5.png);
     background-size: cover;
     background-position: center;
 }
 
 .img-box:nth-child(3){
-    background: url(imac5.png);
+    background: url(../Images/imac5.png);
     background-size: cover;
     background-position: center;
 }
@@ -125,6 +125,17 @@ h4{
     font-size: 20px;
 }
 
+.form{
+    height: 10%;
+    height: 15px;
+    border-color: whitesmoke;
+    border-radius: 10px;
+    overflow-y: ;
+}
+
+.terms{
+    font-size: 7px;
+}
 
 #about{
    background: whitesmoke;
@@ -150,15 +161,15 @@ h4{
     height: 450px;
 }
 
-#contact{
+#contact{ /* form container / background */
     color: #666;
     opacity: 0.8;
     border-radius: 30px;
     width: 100%;
     position: fixed;   
-    bottom: 0px; 
-    background-color: whitesmoke;
-    height: 130px;
+    bottom: 5px; 
+    background-color: white;
+    height: 25%;
 }
 
 #contact:hover{
@@ -166,9 +177,11 @@ h4{
     vertical-align: baseline;
 }
 
+
 #footer{
     color: #666;
     opacity: 0.5;
     width: 100%;
     font-size: x-small;
+    float: right;
 }
