--- a/Basic_HTML_and_CSS/One Page Website/CSS/one_page_website.css
+++ b/Basic_HTML_and_CSS/One Page Website/CSS/one_page_website.css
@@ -127,10 +127,9 @@ h4{
 
 .form{
     height: 10%;
-    height: 15px;
     border-color: whitesmoke;
     border-radius: 10px;
-    overflow-y: ;
+    margin: 15px;
 }
 
 .terms{
@@ -160,6 +159,7 @@ h4{
     width: 100%;
     height: 450px;
 }
+
 
 #contact{ /* form container / background */
     color: #666;
