--- a/Basic_HTML_and_CSS/Project/Seven Kingdoms site/CSS/seven-kingdoms.css
+++ b/Basic_HTML_and_CSS/Project/Seven Kingdoms site/CSS/seven-kingdoms.css
@@ -14,14 +14,40 @@ body {  /* behind img gallery container*/
     margin: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.42857143;
-    color: #333;
+    color: #f5f3f30b;
     background-color: rgb(29, 29, 29);
 }
 
-footer,
-nav {
-    display: block;
+footer {
+    display: inline;
 }
+
+  
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgba(98, 65, 4, 0.749);
+}
+  
+li {
+    float: left;
+}
+  
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #f5f3f30b;
+  }
+  
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
@@ -84,11 +110,7 @@ section {
     margin-top: 50px;
 }
 
-.navbar {
-    height: 105px;
-    max-height: 340px;
-    display: block;
-}
+
 
 .container {
     padding-right: 15px;
@@ -117,31 +139,7 @@ section {
     content: " ";
 }
 
-.wrap {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    /* This ensures that the images cannot
-    render outside of their container
-    without forcing any scrollbars */
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    text-align: center;
-}
 
-.menu-container {
-    max-height: 340px;
-    margin: 0% auto;
-    content: " ";
-    /* top: 0;
-    left: 0; */
-     /* postion : absolute: */ /*to the top edge of the screen */
-     width: 100%;
-     position: fixed;
-     z-index: 100;
-     /* background-color: rgba(255, 255, 255, 0.5); */
-}
 
 /*-------------------------------------------------
     HOME SECTION STYLES
@@ -201,7 +199,7 @@ section {
     padding: 10px;
     border-radius: 8px;
     margin: 0px auto;
-    background-color: rgb(90, 90, 90);
+    background-color: rgba(98, 65, 4, 0.749);
     box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -214,7 +212,7 @@ section {
     padding: 10px;
     border-radius: 8px;
     margin: 0px auto;
-    background-color: rgb(90, 90, 90);
+    background-color: rgba(98, 65, 4, 0.749);
     box-shadow: -1px -1px 1px 0 rgba(0, 0, 0, 1), 1px 2px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -251,13 +249,13 @@ section {
     font-size: 15px;
     outline: none;
     font-weight: 600;
-    color: #8d8e8f6c;
+    color: #f5f3f30b;
     padding: 12px 12px;
     width: 70%;
-    border: 1px solid #808080;
+
     margin: 2% auto;
     border-radius: 7px;
-    background: rgb(227, 222, 222);
+    background: #f5f3f30b;
     box-shadow: 2px 3px 3px 0px rgba(0, 0, 0, 0.3);
     font-family: "Game of Thrones regular";
 }
@@ -266,7 +264,7 @@ section {
     font-size: 15px;
     outline: none;
     font-weight: 600;
-    color: #ffffff;
+    color: #f5f3f30b;
     padding: 2% 1% 2% 7%;
     width: 80%;
     border-top: 1px solid #090B0D;
@@ -275,7 +273,6 @@ section {
     border-left: 1px solid #090B0D;
     margin: 10px 1em;
     border-radius: 7px;
-    background: #13161B;
     box-shadow: inset 0px 3px 0px 0px rgba(5, 5, 5, 0.15);
     font-family: 'Raleway', sans-serif;
 }
@@ -303,13 +300,9 @@ section {
     float: right;
 }
 
-.terms:hover{
-    color: rgba(98, 65, 4, 0.749);
-    text-decoration: underline;
-}
 
 .submit input[type="submit"]{
-    color: rgba(98, 65, 4, 0.749);
+    color: black;
     cursor: pointer;
     border: none;
     font-weight: 900;
@@ -322,13 +315,13 @@ section {
     font-size: 18px;
     transition: border-color 0.3s color 0.3s background-color 0.3s;
     border-radius: 7px;
-    background-color: #797a7b;
+    background-color: rgb(90, 90, 90);
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.3);
 }
 
 .submit input[type="submit"]:hover {
     color: #000;
-    background-color: rgb(90, 90, 90);
+    background-color: rgba(98, 65, 4, 0.749);
     box-shadow: inset 1px 2px 15px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -336,7 +329,7 @@ section {
     FOOTER STYLES
 --------------------------*/
 #footer {
-    background-color: rgb(90, 90, 90);
+    background-color: rgba(98, 65, 4, 0.749);
     color: #000;
     text-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 1);
     padding: 20px 50px 20px 50px;
